--- a/index.html
+++ b/index.html
@@ -28,135 +28,114 @@ class: middle right
 
 
 
-# **Les acquis du projet 2019**
+# **Création de site internet - test MAJ**
 
-## parce que rendre compte est primordial
+## Utilisation de netlify
+
+---
+class:midlle left  
+background-image: url(https://images.unsplash.com/photo-1557487307-8dc8ec048eb8?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80)
+background-size: 417px 589px
+background-position: 95% 50%
+.pull-left[
+
+## Créer un dossier sur votre ordinateur pour le site internet 
+
+### Nommer le dossier par exemple: `netlify`
+
+]
+---
+
+## Créer un projet Rstudio sur votre ordinateur
+
+### Mettre le dossier projet qui sera généré dans un nouveau dossier: par exemple `usingnetlify`
+
+### Le dossier `usingnetlify` devra être dans le dossier initial `netlify`
+
+### Besoin de plus de détails? Voir prochaine vidéo
 
 ---
 
-## Le bilan du projet 2019 
+## Créer un projet Rstudio sur votre ordinateur
 
-### Projet 1: Bourse d'étude pour les meilleurs élèves
-
-* Il y a eu plusieurs actions de lobbying menées y compris le dîner gala et le dîner pour les 100 pourcents.
-
-* Sur ce projet également, le Conseil d'administration a assisté directement ou par lettre recommandée plusieurs AS admis dans certaines écoles en Europe et en Asie notamment soit dans le cadre de la facilitation des dossiers d'admission soit en termes de soutien financier direct. Le Conseil d'administration se felicite ainsi d'avoir assisté une dizaine D'AS dans cette situation en 2 ans de mandat.
-
-* Aussi, grâce à l'organisation du dernier Dîner 100%, avec l'aide de l'aîné Moussa Kouyate, la connexion est établie avec le Ministre Abdourahmane Cissé et des discussions sont en cours pour l'obtention de bourses d'études étrangères pour les meilleurs parmi les AS44.
-
-* Le Ministre a d'ailleurs communiqué lors du dîner sur un dispositif déjà existant au niveau de la Présidence auquel nos cadets pourront soumissionner bien sûr avec l'aide du Conseil d’Administration de la 2ALSY.
+&lt;video width="640" height="480" controls&gt;
+  &lt;source src="video1.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 
 ---
 
-## Le bilan du projet 2019 
+class:middle left  
+background-image: url(https://images.unsplash.com/photo-1544654795-39ef9d3102bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=375&amp;q=80)
+background-size: 400px 600px
+background-position: 95% 50%
 
-### Projet 2: Coaching d'entrée dans les écoles supérieures prestigieuses
+.pull-left[
 
-* Il y a eu des actions de soutien aux cadets admissibles aux grandes écoles européennes et nord-américaines. 
+## Créer un dossier dans le dossier projet `usingnetlify`. 
 
-* Avec notamment des aides pour le respect des conditions financières des admissibles (mise en contact avec des garants issus de la diaspora par exemple). 
+### Nommer ce dossier `markdown` par exemple
 
-* Il y a aussi eu 5 séances de coaching des étudiants du lycée pilotée par la Commission Etudes et admission 
+### Ce dossier comportera le fichier markdown du site internet et les autres fichiers qui seront générés par R
 
----
-
-## Le bilan du projet 2019 
-
-### Projet 3: Ouvrir un laboratoire informatique et un laboratoire de langues
-
-* Grâce à notre action auprès des Aînés, 2 salles informatiques ont été offertes par l'aîné Moussa Kouyaté en plus du don de salles informatiques fait par Feu le PM AGC. 
-
-* Sur le laboratoire de langue aussi, grâce à la Coopération Chinoise, le mandarin a été adopté pour être enseigné au LSY dans les salles informatiques offertes. 
+]
 
 ---
 
-## Le bilan du projet 2019 
+## Créer un fichier markdown à partir de RStudio  
 
-### Projet 4: Réhabilitation des bâtiments du lycée scientifique
+* Mettre le fichier dans le dossier créé à l'étape précédente pour les fichiers `markdown`
 
-* La 2alsy a poursuivi les échanges avec le Gouvernement via le Ministère de l'éducation nationale et grâce à l'implication de plusieurs Aînés comme le DG du BNETD, Le ministre Diarrassouba et Danho Paulin pour ne citer que ceux là et surtout grâce à la mobilisation des AS en termes de communication, l'accord cadre a été signé avec l'AFD pour réhabiliter le Lycée. C'est officiel.
+* Nommer le fichier markdown `index`
 
-* Avec des propositions solides, les pouvoirs publics ont compris l'urgente nécessité de nous associer en termes de réflexions stratégiques sur le Management Post-Réhabilitation du Lycée. C'est une avancée majeure.
+* Personalisez le fichier markdown `index`
 
----
+* La prochaine slide explique le processus de création d'un fichier `markdown`
 
-## Le bilan du projet 2019
-
-### Projet 5: Équiper l'amicale d'outils qui fonctionnent
-
-* (i) Siège pour cotisations et tâches administratives: Cette gestion a été efficiente parce que, malgré les conditions financières limitées qui ont mis à mal le projet "siège", l'on a reussi à innover avec une collecte effective des cotisations et de la gestion administrative grâce notamment à une stratégie financière agressive (goodies, paliers de paiement, contrepartie en place au dîner) mise en place par le leadership (dizaines de millions collectés). 
-
-* (ii) site internet: malgré la covid qui a fait changer énormement les priorités, le site a été créé, et il y a eu une excellente refonte des moyens de communication qui a permis une meilleure identité visuelle de l'association: résultat: plus de 1000 nouvelles adhésions au groupe Facebook, bon de plusieurs centaines de likes. Ceci est extremement important en cet age de l'information.
+* Pour plus d'informations sur la personalisation d'un fichier `markdown`, voir [ici](https://usingxaringan.netlify.app)
 
 ---
 
-## Le bilan du projet 2019
+## Créer un fichier markdown à partir de RStudio  
 
-### Projet 6: Créer un incubateur de start up pour l'amicale
-
-* Ceci a aussi été impacté par le changement de priorité mentionné ci dessus ainsi que par les contraintes financières (ces activités devraient se faire au siege). 
-
-* Cependant les masters class organisées ont eu un impact sur les entrepreneurs et autres professionnels. Ce projet reste tout de meme d'actualité dans la mesure du possible financier.
+&lt;video width="650" height="400" controls&gt;
+  &lt;source src="video2.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 
 ---
 
-## Le bilan du projet 2019
+## Créer un compte github et un "repository" pour le site
 
-### Projet 7: Salon annuel de l'orientation et de l'emploi
-
-* Ceci a aussi été impacté par le changement de priorité mentionné ci dessus.
-
-* Ici aussi les masters class organisées ont eu un impact sur les étudiant en termes d'orientation.
+&lt;video width="650" height="400" controls&gt;
+  &lt;source src="video3.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 
 ---
 
-## Le bilan du projet 2019
+## Télécharger les fichiers du dossier markdown dans le repository github
 
-### Projet 8: Mentoring entre les élèves et les alumnis du LSY
-
-* La covid a rendu un tel exercice difficile. Cependant, la formation de recherche d'emploi organisée par le président y compris sa prise en charge des photos professionnels des AS qui en avaient besoin, montre la bonne foi de la gestion en ce sens. 
-
-* Toujours aspect covid, on ne peut pas faire certaines choses en ligne dans un pays où les concernés (étudiants) n'ont pas une connexion internet excellente. 
-
-* La bonne foi de la 2alsy s'exprime aussi par la cérémonie gala des 100 pourcents a été organisée dès que possible et avait pour but justement d'offrir une référence et des partenariats au profit des cadets (le président dira comment cela avance)
+&lt;video width="650" height="400" controls&gt;
+  &lt;source src="video4.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 
 ---
 
-## Le bilan du projet 2019
+## Créer un compte Netlify, le connecter au compte github, deployer le site et le renommer
 
-### Projet 9: Création des clubs et des rencontres à thèmes
+&lt;video width="650" height="400" controls&gt;
+  &lt;source src="video5.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 
-* La 2lsy dispose aujourd'hui de 13 Clubs thématiques qui fonctionnent correctement. 
-
-* Des opportunités sectorielles y sont partagées et les AS des secteurs similaires ont renforcé leurs contacts via ce canal simple mais terriblement efficaces. 
-
-* 5 Masterclass thématiques ont aussi été organisées avec des participations tutoyant les 100 personnes  participantes en moyenne par Masterclass.
 
 ---
 
-## Le bilan du projet 2019
+## Modifier le site à partir uniquement de github
 
-### Projet 10: Création des clubs et des rencontres à thèmes
-
-* Il y a eu de nombreux appuis aux AS et l'on n'ira pas dans le détail pour le respect des concernés mais tout AS aura pu voir les appuis apportés à nos confreres dans l'affliction. 
-
-* Il y a aussi eu la spectaculaire implication de la diaspora (2alsy Amérique du nord par exemple) dans le soutien aux AS dans le besoin. 
-
+&lt;video width="650" height="400" controls&gt;
+  &lt;source src="video6.mp4" type="video/mp4"&gt;
 ---
 
-## **Alors pourquoi voter pour l'équipe Doungnan**?
-
-L'équipe Doungnan pour &lt;font color='red'&gt;trois&lt;/font&gt;  point majeurs.     
-
-* Une gestion du coeur: avec un succès au niveau social et une grande aide à l'excellence
-
-* Une gestion efficiente: Il y a eu la réalisation des objectifs de gestion efficiente et de bonne santé financière sans avoir eu à investir dans le siège. La gestion a pu faire le mieux possible avec les ressources disponibles. Tout l'argent attendu n'a pas pu être collecté, mais les résultats finaux attendus (contribution de la 2alsy) tel que les 100 pourcent et l'augmentation de la « street cred » de la 2alsy ont été réalisés.
-
-* Une gestion dynamique: La gestion a su s'adapter et le mot dynamique dans la campagne dernière a pris tout son sens: La gestion a pu s'adapter à des facteurs exogènes tel que la covid et le fait qu'il ait été déconseillé par les autorités publiques d'aller vers les partenaires privés. cette dynamique a permis de réaliser les résultats attendus pour la 2alsy et les étudiants de l'école.
-
----
 class: middle right 
-## **Merci pour le soutien renouvelé**
+## **Merci de votre attention**
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
