--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ class: middle right
 
 
 
-# **Création de site internet - test MAJ**
+# **Création de site internet - test MAJ final**
 
 ## Utilisation de netlify
 
